# WaveDB

./: .gitignore  .gitmodules  BenchmarkImprovements.md  Branch-Performance-Comparison.md  CLAUDE.md  CMakeLists.txt  DatabaseBenchmarkComparison.md  Experimental-HBTrie-Benchmark.md  Experimental-LRU-Benchmark.md  Master-Benchmark.md  PERSISTENCE.md  README.md  Refactor.md  SHARDED_FIFO_QUEUE_COMPLETE.md  SHARDED_FIFO_QUEUE_IMPLEMENTATION_SUMMARY.md  STYLEGUIDE.md  VISUALIZATION_EXAMPLE.md  example_complex_viz.c  example_viz.c  test_concurrent_debug2.js  test_mvcc_recovery.c
.benchmarks/: sync_delete.json  sync_get.json  sync_mixed.json  sync_put.json
.github/workflows/: performance.yml
benchmarks/: README.md
bindings/: test-overwrite-no-close.js  test_debug_mocha.js
bindings/dart/: README.md  analysis_options.yaml  benchmark.dart  pubspec.yaml
bindings/dart/benchmark/: async_bench.dart  benchmark.dart  compare.sh  many_bench.dart
bindings/nodejs/: .gitignore  .npmignore  CMakeLists.txt  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES.md  MVCC_FIX_SUMMARY.md  PERSISTENCE_STATUS.md  README.md  TEST_SUMMARY.md  WAL_PERSISTENCE_SUMMARY.md  batch_worker.cc  benchmark.js  binding.gyp  debug_wal.js  del_worker.cc  get_worker.cc  package-lock.json  package.json  test-api-comprehensive.js  test-mvcc-comprehensive.js  test-persistence.js  test-safe-operations.js  test-simple-persistence.js  test_50_reads.js  test_await.js  test_buffer_issue.js  test_close_race.js  test_crash.js  test_db_state.js  test_debug.js  test_delete_logging.c  test_full.js  test_key2.js  test_legacy_mode.js  test_multi_db.js  test_multikey.js  test_order.js  test_path_encoding.c  test_pattern.js  test_persist_simple.js  (+12 more)
bindings/python/: .gitignore  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  benchmark.py  pyproject.toml  setup.py
bindings/python/scripts/: copy_sources.py
bindings/python/src/wavedb/: __init__.py  _async.py  _cffi_build.py  _errors.py  _native.py  _native_abi.py  config.py  database.py  exceptions.py  graph_layer.py  graphql_layer.py  iterator.py  object_ops.py  subtree.py
bindings/python/src/wavedb/_lib/: __init__.py
bindings/python/tests/: conftest.py  test_async_bridge.py  test_async_core.py  test_batch.py  test_batched_helpers.py  test_config.py  test_encryption.py  test_errors.py  test_graph.py  test_graphql.py  test_iterator.py  test_mvcc.py  test_native.py  test_object_ops.py  test_persistence.py  test_stress_async.py  test_subtree.py  test_wavedb.py
cmake/: WaveDBConfig.cmake.in
docs/: BENCHMARKING.md  benchmark-results-thread-local-wal.md  graph-db-schema-layer.md  tech-debt-audit.md  timing-wheel-bug-fix.md  timing-wheel-race-condition-fix.md  visualization.md  wal-thread-local.md  write-optimization-analysis.md
scripts/: generate_perf_report.py  run_benchmarks.sh
src/: wavedb.def
src/Actor/: actor.c  actor.h  message.h  pool.h
src/Buffer/: buffer.c  buffer.h
src/Database/: batch.c  batch.h  bnode_cache_actor.c  bnode_cache_actor.h  crc32.h  database.c  database.h  database_config.c  database_config.h  database_iterator.c  database_iterator.h  database_lru.c  database_lru.h  database_subtree.c  database_subtree.h  eviction_queue.c  eviction_queue.h  lockfree_lru.c  lockfree_lru.h  lru_actor.c  lru_actor.h  trie_shard_actor.c  trie_shard_actor.h  wal.c  wal.h  wal_actor.c  wal_actor.h  wal_compactor.c  wal_compactor.h  wal_manager.c  wal_manager.h
src/HBTrie/: bnode.c  bnode.h  bs_array.c  bs_array.h  chunk.c  chunk.h  hbtrie.c  hbtrie.h  hbtrie_viz.c  hbtrie_viz.h  identifier.c  identifier.h  mvcc.c  mvcc.h  path.c  path.h
src/Platform/: platform_thread.c  platform_thread.h
src/RefCounter/: refcounter.c  refcounter.h
src/Scheduler/: scheduler.c  scheduler.h
src/Storage/: bnode_cache.c  bnode_cache.h  encryption.c  encryption.h  node_serializer.c  node_serializer.h  page_file.c  page_file.h  section.c  section.h  sections.c  sections.h  stale_region.c  stale_region.h
src/Time/: debouncer.c  debouncer.h  ticker.c  timer_actor.c  timer_actor.h  wheel.c  wheel.h
src/Util/: atomic_compat.h  concurrent_hashmap.c  concurrent_hashmap.h  dirent_compat.h  fs_block_size.c  get_dir.c  hazard_pointers.c  hazard_pointers.h  memory_pool.c  memory_pool.h  mkdir_p.c  ms_queue.c  ms_queue.h  path_join.h  perf_counters.c  perf_counters.h  portable_endian.h  rm_rf.c  threadding.c  threadding.h  unistd_compat.h  windows_compat.h  xxhash.h
src/Workers/: error.c  error.h  join.c  join.h  pool.c  pool.h  priority.h  promise.c  promise.h  queue.c  queue.h  transaction_id.c  transaction_id.h  work.c  work.h
tests/: benchmark_concurrent_write.cpp  benchmark_database_quick.cpp  benchmark_lru_comparison.cpp  benchmark_write_amplification.cpp  microbench_raw.c  test_abort_cleanup.cpp  test_actor_scheduler.c  test_batch.cpp  test_bnode.cpp  test_bnode_cache.cpp  test_cache_actors.c  test_chunk.c  test_chunk.cpp  test_concurrent_hashmap.cpp  test_database.cpp  test_database_config.cpp  test_encrypted_database.cpp  test_encryption.cpp  test_eviction_queue.cpp  test_graph.cpp  test_graph_optimizer.cpp  test_graph_parser.cpp  test_graph_schema.cpp  test_graph_set.c  test_graphql_lexer.cpp  test_graphql_parser.cpp  test_graphql_plan.cpp  test_graphql_query.cpp  test_graphql_resolve.cpp  test_graphql_schema.cpp  test_hazard_pointers.cpp  test_hbtrie.cpp  test_hbtrie_viz.cpp  test_identifier.cpp  test_lockfree_lru.cpp  test_lockfree_lru_concurrent.cpp  test_lru_memory.cpp  test_memory_pool.cpp  test_ms_queue.cpp  test_mvcc.cpp  (+16 more)
tests/benchmark/: benchmark_base.c  benchmark_base.h  benchmark_concurrent_only.cpp  benchmark_database.cpp  benchmark_database_sync.cpp  benchmark_database_sync_only.cpp  benchmark_database_sync_raw.cpp  benchmark_hbtrie_optimistic.cpp  benchmark_hbtrie_write.cpp  benchmark_page_cache.cpp  benchmark_persist.cpp  benchmark_sections.cpp  benchmark_thread_wal.cpp  benchmark_thread_wal_simple.cpp  benchmark_wal.cpp  micro_bench_trie.cpp  test_asan.cpp
tests/stress/: test_concurrent_sections.cpp  test_long_running.cpp  test_resource_limits.cpp
(+171 files in other folders)
